# dung_cleaner_robot

./: README.md
ROS/: .gitignore  (+1 more)
ROS/src/suru_v1_0/: CMakeLists.txt  README.md  package.xml
ROS/src/suru_v1_0/Documentation/: Changelogs.MD
ROS/src/suru_v1_0/config/: ekf.yaml  ekf_wheel_imu.yaml  joint_names_DCMachine_ChassisAssy2.yaml
ROS/src/suru_v1_0/launch/: display.launch  gazebo.launch  robot_ekf.launch.py  rviz_launch.py  suru_launch.py  suru_localisation_launch.py  suru_navigation_launch.py  suru_navigation_with_slam_launch.py  suru_slam_launch.py  suru_slam_navigation_launch.py
ROS/src/suru_v1_0/maps/: library_setup.yaml  terrace_map.pgm  terrace_map.yaml
ROS/src/suru_v1_0/meshes/: BackCastor.STL  BackCastorBkt.STL  Backcastor_link.STL  Chassis2.STL  FLCastor_Link.STL  FRcastor_link.STL  FrontLeftCastor.STL  FrontLeftCastorBkt.STL  FrontRightCastor.STL  FrontRightCastorBkt.STL  LDWheel_link.STL  LeftDriveWheel.STL  Lidar_link.STL  RDwheel_link.STL  RightDriveWheel.STL  base_link.STL  imu_link.STL
ROS/src/suru_v1_0/models/description/: gazebo_model.sdf  model.config
ROS/src/suru_v1_0/params/: laser_filter.yaml  nav2_params.yaml  robot_navigation_parameters.yaml  robot_navigation_with_lifelong_slam_parameters.yaml  robot_slam_parameters.yaml
ROS/src/suru_v1_0/rviz/: nav2_default_view.rviz  rviz_config.rviz  urdf_config.rviz
ROS/src/suru_v1_0/transform_tree/: frames_2024-12-25_10.21.07.gv
ROS/src/suru_v1_0/urdf/: DCMachine_ChassisAssy2.csv  DCMachine_ChassisAssy2.urdf  DCMachine_ChassisAssy3.urdf
ROS/src/suru_v1_0/worlds/: smalltown.world
(+61 files in other folders)
