<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suru_v1_0</name>
  <version>1.5.1</version>
  <description>
    <p>URDF Description package for suru_v1_0</p>
    <p>This package contains configuration data, 3D models and launch files for suru_v1_0</p>
  </description>
  <maintainer email="akashkalghatgi@outlook.com">Akash Kalghatgi</maintainer>
  <license>Copyrights 2025</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>